client/src/App.css
.rows{
  background-color: grey;
}

.columns{
  /* border: 1px solid rgb(95, 95, 95); */
  background-color: white;
  margin-left: 0px;
  padding-left: 0px;
  letter-spacing: -.5px;
}

.editText{
  /* border-top: 1px solid rgb(95, 95, 95);
  border-left: 1px solid rgb(95, 95, 95); */
  /* border-bottom: 1px solid rgb(95, 95, 95); */
  background-color: rgb(206, 204, 204);
  letter-spacing: -.5px; 
}

/* .textArea{
  border: 1px solid rgb(88, 88, 88);
  font: 500 12.8px / 16px "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sansSerif;
  margin-left:60px;
} */

.navBar{
  background-color: #17a2b8;
    font: 500 12.8px / 16px "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sansSerif;
  width: 100%;
}

.footer{
  background-color: #17a2b8;
    font: 600 12px / 16px "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sansSerif;
}

.col{
  padding-left: 0px;
  padding-right: 0px;
}
.col-1{
  padding-left: 0px;
  padding-right: 0px;
}

/* main{
  height: calc(100vh - 100px);
} */

/* html {
  overflow: hidden; 
} */

